chore: api update, improve errors
